report: update references

--- a/report/refs.bib
+++ b/report/refs.bib
@@ -183,7 +183,54 @@ number = {CMU-CS-92-102},
   pages = {279-292},
   timestamp = {2020-03-03T11:49:53.000+0100},
   title = {Technical Note Q-Learning.},
-  url = {http://dblp.uni-trier.de/db/journals/ml/ml8.html#WatkinsD92},
+  url = {http://dblp.uni-trier.de/db/journals/ml/ml8.html#WatkinD92},
   volume = 8,
   year = 1992
 }
+
+@Book{nla.cat-vn2770732,
+author = { Skinner, B. F. },
+title = { The behavior of organisms : and experimental analysis / by B. F. Skinner },
+publisher = { Appleton-Century-Crofts New York },
+pages = { xv, 457 p. : },
+year = { 1938 },
+type = { Book },
+language = { English },
+subjects = { Rats.; Psychophysiology. },
+life-dates = {  - 1938 },
+catalogue-url = { https://nla.gov.au/nla.cat-vn2770732 },
+}
+
+@inproceedings{NIPS2006_c1b70d96,
+ author = {Auer, Peter and Ortner, Ronald},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {B. Sch\"{o}lkopf and J. Platt and T. Hoffman},
+ pages = {},
+ publisher = {MIT Press},
+ title = {Logarithmic Online Regret Bounds for Undiscounted Reinforcement Learning},
+ url = {https://proceedings.neurips.cc/paper/2006/file/c1b70d965ca504aa751ddb62ad69c63f-Paper.pdf},
+ volume = {19},
+ year = {2006}
+}
+
+@InProceedings{SARA07-jong,
+title={Model-Based Exploration in Continuous State Spaces},
+author={Nicholas K. Jong and Peter Stone},
+booktitle={The Seventh Symposium on Abstraction, Reformulation, and Approximation},
+month={July},
+url="http://www.cs.utexas.edu/users/ai-lab?SARA07-jong",
+year={2007}
+}
+
+@inproceedings{NIPS1991_e5f6ad6c,
+ author = {Thrun, Sebastian B. and M\"{o}ller, Knut},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {J. Moody and S. Hanson and R.P. Lippmann},
+ pages = {},
+ publisher = {Morgan-Kaufmann},
+ title = {Active Exploration in Dynamic Environments},
+ url = {https://proceedings.neurips.cc/paper/1991/file/e5f6ad6ce374177eef023bf5d0c018b6-Paper.pdf},
+ volume = {4},
+ year = {1991}
+}
+
