report: finished introduction

--- a/report/refs.bib
+++ b/report/refs.bib
@@ -234,3 +234,76 @@ year={2007}
  year = {1991}
 }
 
+@inproceedings{10.5555/295240.295801,
+author = {Dearden, Richard and Friedman, Nir and Russell, Stuart},
+title = {Bayesian Q-Learning},
+year = {1998},
+isbn = {0262510987},
+publisher = {American Association for Artificial Intelligence},
+address = {USA},
+abstract = {A central problem in learning in complex environments is balancing exploration of untested actions against exploitation of actions that are known to be good. The benefit of exploration can be estimated using the classical notion of Value of Information-the expected improvement in future decision quality that might arise from the information acquired by exploration. Estimating this quantity requires an assessment of the agent's uncertainty about its current value estimates for states. In this paper, we adopt a Bayesian approach to maintaining this uncertain information. We extend Watkins' Q-learning by maintaining and propagating probability distributions over the Q-values. These distributions are used to compute a myopic approximation to the value of information for each action and hence to select the action that best balances exploration and exploitation. We establish the convergence properties of our algorithm and show experimentally that it can exhibit substantial improvements over other well-known model-free exploration strategies.},
+booktitle = {Proceedings of the Fifteenth National/Tenth Conference on Artificial Intelligence/Innovative Applications of Artificial Intelligence},
+pages = {761–768},
+numpages = {8},
+location = {Madison, Wisconsin, USA},
+series = {AAAI '98/IAAI '98}
+}
+
+@book{Lav06,
+  author       = {S. M. LaValle},
+  title        = {Planning Algorithms},
+  publisher    = {Cambridge University Press},
+  address      = {Cambridge, U.K.},
+  note         = {Available at http://planning.cs.uiuc.edu/},
+  year         = {2006}
+}
+
+@article{silver2017mastering,
+  added-at = {2017-12-15T02:14:58.000+0100},
+  author = {Silver, David and Schrittwieser, Julian and Simonyan, Karen and Antonoglou, Ioannis and Huang, Aja and Guez, Arthur and Hubert, Thomas and Baker, Lucas and Lai, Matthew and Bolton, Adrian and Chen, Yutian and Lillicrap, Timothy and Hui, Fan and Sifre, Laurent and van den Driessche, George and Graepel, Thore and Hassabis, Demis},
+  biburl = {https://www.bibsonomy.org/bibtex/2ecdfbfcceb55ee5f14c1c375ad71f2cb/achakraborty},
+  description = {Mastering the game of Go without human knowledge | Nature},
+  interhash = {c45d318e105d0f2d62ccc28c2699d9d4},
+  intrahash = {ecdfbfcceb55ee5f14c1c375ad71f2cb},
+  journal = {Nature},
+  keywords = {2017 deep-learning deepmind google paper reinforcement-learning},
+  month = oct,
+  pages = {354--},
+  publisher = {Macmillan Publishers Limited, part of Springer Nature. All rights reserved.},
+  timestamp = {2017-12-15T02:14:58.000+0100},
+  title = {Mastering the game of Go without human knowledge},
+  url = {http://dx.doi.org/10.1038/nature24270},
+  volume = 550,
+  year = 2017
+}
+
+@InProceedings{pmlr-v28-levine13,
+  title = 	 {Guided Policy Search},
+  author = 	 {Levine, Sergey and Koltun, Vladlen},
+  booktitle = 	 {Proceedings of the 30th International Conference on Machine Learning},
+  pages = 	 {1--9},
+  year = 	 {2013},
+  editor = 	 {Dasgupta, Sanjoy and McAllester, David},
+  volume = 	 {28},
+  number =       {3},
+  series = 	 {Proceedings of Machine Learning Research},
+  address = 	 {Atlanta, Georgia, USA},
+  month = 	 {17--19 Jun},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v28/levine13.pdf},
+  url = 	 {https://proceedings.mlr.press/v28/levine13.html},
+  abstract = 	 {Direct policy search can effectively scale to high-dimensional systems, but complex policies with hundreds of parameters often present a challenge for such methods, requiring numerous samples and often falling into poor local optima. We present a guided policy search algorithm that uses trajectory optimization to direct policy learning and avoid poor local optima. We show how differential dynamic programming can be used to generate suitable guiding samples, and describe a regularized importance sampled policy optimization that incorporates these samples into the policy search. We evaluate the method by learning neural network controllers for planar swimming, hopping, and walking, as well as simulated 3D humanoid running.}
+}
+
+@article{MAL-086,
+url = {http://dx.doi.org/10.1561/2200000086},
+year = {2023},
+volume = {16},
+journal = {Foundations and Trends® in Machine Learning},
+title = {Model-based Reinforcement Learning: A Survey},
+doi = {10.1561/2200000086},
+issn = {1935-8237},
+number = {1},
+pages = {1-118},
+author = {Thomas M. Moerland and Joost Broekens and Aske Plaat and Catholijn M. Jonker}
+}
