report: continuing with chapter 1.

--- a/report/refs.bib
+++ b/report/refs.bib
@@ -307,3 +307,145 @@ number = {1},
 pages = {1-118},
 author = {Thomas M. Moerland and Joost Broekens and Aske Plaat and Catholijn M. Jonker}
 }
+
+@article{Minsky:1961:ire,
+  abstract = {The problems of heuristic programming---of making computers solve
+	really difficult problems---are divided into five main areas: Search,
+	Pattern-Recognition, Learning, Planning, and Induction. Wherever
+	appropriate, the discussion is supported by extensive citation of
+	the literature and by descriptions of a few of the most successful
+	heuristic (problem-solving) programs constructed to date.
+	
+	The adjective "heuristic," as used here and widely in the literature,
+	means related to improving problem-solving performance; as a noun
+	it is also used in regard to any method or trick used to improve
+	the efficiency of a problem-solving system. A "heuristic program,"
+	to be considered successful, must work well on a variety of problems,
+	and may often be excused if it fails on some. We often find it worthwhile
+	to introduce a heuristic method, which happens to cause occasional
+	failures, if there is an over-all improvement in performance. But
+	imperfect methods are not necessarily heuristic, nor vice versa.
+	Hence "heuristic" should not be regarded as opposite to "foolproof";
+	this has caused some confusion in the literature.},
+  added-at = {2017-03-16T11:50:55.000+0100},
+  author = {Minsky, Marvin},
+  biburl = {https://www.bibsonomy.org/bibtex/2f1f2d84d704a03a03ef4e0282c44a6f3/krevelen},
+  interhash = {e3ea30125d28343ae56ccc83d6e32cf9},
+  intrahash = {f1f2d84d704a03a03ef4e0282c44a6f3},
+  journal = {Proc. IRE},
+  keywords = {imported thesis},
+  month = jan,
+  owner = {Rick},
+  timestamp = {2017-03-16T11:54:14.000+0100},
+  title = {Steps toward artificial intelligence},
+  url = {http://web.media.mit.edu/~minsky/papers/steps.html},
+  year = 1961
+}
+
+@phdthesis{10.5555/911176,
+author = {Sutton, Richard Stuart},
+title = {Temporal Credit Assignment in Reinforcement Learning},
+year = {1984},
+publisher = {University of Massachusetts Amherst},
+abstract = {This dissertation describes computational experiments comparing the performance of a range of reinforcement-learning algorithms. The experiments are designed to focus on aspects of the credit-assignment problem having to do with determining when the behavior that deserves credit occurred. The issues of knowledge representation involved in developing new features or refining existing ones are not addressed. The algorithms considered include some from learning automata theory, mathematical learning theory, early "cybernetic" approaches to learning, Samuel's checker-playing program, Michie and Chambers's "Boxes" system, and a number of new algorithms. The tasks were selected so as to involve, first in isolation and then in combination, the issues of misleading generalizations, delayed reinforcement, unbalanced reinforcement, and secondary reinforcement. The tasks range from simple, abstract "two-armed bandit" tasks to a physically realistic pole-balancing task.The results indicate several areas where the algorithms presented here perform substantially better than those previously studied. An unbalanced distribution of reinforcement, misleading generalizations, and delayed reinforcement can greatly retard learning and in some cases even make it counterproductive. Performance can be substantially improved in the presence of these common problems through the use of mechanisms of reinforcement comparison and secondary reinforcement. We present a new algorithm similar to the "learning-by-generalization" algorithm used for altering the static evaluation function in Samuel's checker-playing program. Simulation experiments indicate that the new algorithm performs better than a version of Samuel's algorithm suitably modified for reinforcement learning tasks. Theoretical analysis in terms of an "ideal reinforcement signal" sheds light on the relationship between these two algorithms and other temporal credit-assignment algorithms.},
+note = {AAI8410337}
+}
+
+@ARTICLE{5392560,
+
+  author={Samuel, A. L.},
+
+  journal={IBM Journal of Research and Development}, 
+
+  title={Some Studies in Machine Learning Using the Game of Checkers}, 
+
+  year={1959},
+
+  volume={3},
+
+  number={3},
+
+  pages={210-229},
+
+  doi={10.1147/rd.33.0210}}
+
+@techreport{rummery:cuedtr94,
+  added-at = {2008-03-11T14:52:34.000+0100},
+  address = {Cambridge, England},
+  author = {Rummery, G. A. and Niranjan, M.},
+  biburl = {https://www.bibsonomy.org/bibtex/220239f82583859588c96171ccc015e65/idsia},
+  citeulike-article-id = {2378892},
+  institution = {Cambridge University Engineering Department},
+  interhash = {0c7cd3821ad0fe1b39a6ce1b35ec4bc0},
+  intrahash = {20239f82583859588c96171ccc015e65},
+  keywords = {nn},
+  number = {TR 166},
+  priority = {2},
+  timestamp = {2008-03-11T14:59:39.000+0100},
+  title = {On-Line {Q}-Learning Using Connectionist Systems},
+  year = 1994
+}
+
+@inproceedings{conf/nips/Sutton95,
+  added-at = {2020-03-06T00:00:00.000+0100},
+  author = {Sutton, Richard S.},
+  biburl = {https://www.bibsonomy.org/bibtex/2633b671232afdadc63a137deca746be6/dblp},
+  booktitle = {NIPS},
+  crossref = {conf/nips/1995},
+  editor = {Touretzky, David S. and Mozer, Michael and Hasselmo, Michael E.},
+  ee = {http://nips.djvuzone.org/djvu/nips08/1038.djvu},
+  interhash = {ff6b0036cbf1939b745a39f17c1cd667},
+  intrahash = {633b671232afdadc63a137deca746be6},
+  isbn = {0-262-20107-0},
+  keywords = {dblp},
+  pages = {1038-1044},
+  publisher = {MIT Press},
+  timestamp = {2020-03-07T11:46:07.000+0100},
+  title = {Generalization in Reinforcement Learning: Successful Examples Using Sparse Coarse Coding.},
+  url = {http://dblp.uni-trier.de/db/conf/nips/nips1995.html#Sutton95},
+  year = 1995
+}
+
+@inproceedings{
+dabney2021temporallyextended,
+title={Temporally-Extended {\ensuremath{\varepsilon}}-Greedy Exploration},
+author={Will Dabney and Georg Ostrovski and Andre Barreto},
+booktitle={International Conference on Learning Representations},
+year={2021},
+url={https://openreview.net/forum?id=ONBPHFZ7zG4}
+}
+
+@InProceedings{10.1007/978-3-642-76153-9_28,
+author="Bridle, John S.",
+editor="Souli{\'e}, Fran{\c{c}}oise Fogelman
+and H{\'e}rault, Jeanny",
+title="Probabilistic Interpretation of Feedforward Classification Network Outputs, with Relationships to Statistical Pattern Recognition",
+booktitle="Neurocomputing",
+year="1990",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="227--236",
+abstract="We are concerned with feed-forward non-linear networks (multi-layer perceptrons, or MLPs) with multiple outputs. We wish to treat the outputs of the network as probabilities of alternatives (e.g. pattern classes), conditioned on the inputs. We look for appropriate output non-linearities and for appropriate criteria for adaptation of the parameters of the network (e.g. weights). We explain two modifications: probability scoring, which is an alternative to squared error minimisation, and a normalised exponential (softmax) multi-input generalisation of the logistic non-linearity. The two modifications together result in quite simple arithmetic, and hardware implementation is not difficult either. The use of radial units (squared distance instead of dot product) immediately before the softmax output stage produces a network which computes posterior distributions over class labels based on an assumption of Gaussian within-class distributions. However the training, which uses cross-class information, can result in better performance at class discrimination than the usual within-class training method, unless the within-class distribution assumptions are actually correct.",
+isbn="978-3-642-76153-9"
+}
+
+@article{anderson86,
+author = {Anderson, Charles},
+year = {2001},
+month = {11},
+pages = {},
+title = {Learning and Problem Solving with Multilayer Connectionist Systems}
+}
+
+@inproceedings{NIPS1989_17000029,
+ author = {Mozer, Michael C and Bachrach, Jonathan},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {D. Touretzky},
+ pages = {},
+ publisher = {Morgan-Kaufmann},
+ title = {Discovering the Structure of a Reactive Environment by Exploration},
+ url = {https://proceedings.neurips.cc/paper/1989/file/1700002963a49da13542e0726b7bb758-Paper.pdf},
+ volume = {2},
+ year = {1989}
+}
+
