Updates from Overleaf

--- a/report/refs.bib
+++ b/report/refs.bib
@@ -429,13 +429,13 @@ abstract="We are concerned with feed-forward non-linear networks (multi-layer pe
 isbn="978-3-642-76153-9"
 }
 
-@article{anderson86,
-author = {Anderson, Charles},
-year = {2001},
-month = {11},
-pages = {},
+@phdthesis{anderson86,
+author = {Anderson, Charles William},
+year = {1986},
 title = {Learning and Problem Solving with Multilayer Connectionist Systems}
 }
+
+
 
 @inproceedings{NIPS1989_17000029,
  author = {Mozer, Michael C and Bachrach, Jonathan},
