report: continuation of literature review, etc.

--- a/report/refs.bib
+++ b/report/refs.bib
@@ -448,3 +448,104 @@ title = {Learning and Problem Solving with Multilayer Connectionist Systems}
  year = {1989}
 }
 
+@article{DBLP:journals/corr/PathakAED17,
+  author    = {Deepak Pathak and
+               Pulkit Agrawal and
+               Alexei A. Efros and
+               Trevor Darrell},
+  title     = {Curiosity-driven Exploration by Self-supervised Prediction},
+  journal   = {CoRR},
+  volume    = {abs/1705.05363},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1705.05363},
+  eprinttype = {arXiv},
+  eprint    = {1705.05363},
+  timestamp = {Mon, 13 Aug 2018 16:48:59 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/PathakAED17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{10.5555/944919.944941,
+author = {Auer, Peter},
+title = {Using Confidence Bounds for Exploitation-Exploration Trade-Offs},
+year = {2003},
+issue_date = {3/1/2003},
+publisher = {JMLR.org},
+volume = {3},
+number = {null},
+issn = {1532-4435},
+abstract = {We show how a standard tool from statistics --- namely confidence bounds --- can be used to elegantly deal with situations which exhibit an exploitation-exploration trade-off. Our technique for designing and analyzing algorithms for such situations is general and can be applied when an algorithm has to make exploitation-versus-exploration decisions based on uncertain information provided by a random process. We apply our technique to two models with such an exploitation-exploration trade-off. For the adversarial bandit problem with shifting our new algorithm suffers only O((ST)1/2) regret with high probability over T trials with S shifts. Such a regret bound was previously known only in expectation. The second model we consider is associative reinforcement learning with linear value functions. For this model our technique improves the regret from O(T3/4) to O(T1/2).},
+journal = {J. Mach. Learn. Res.},
+month = {mar},
+pages = {397–422},
+numpages = {26},
+keywords = {reinforcement learning, online Learning, exploitation-exploration, linear value function, bandit problem}
+}
+
+
+
+@article{DBLP:journals/corr/abs-1709-05380,
+  author    = {Brendan O'Donoghue and
+               Ian Osband and
+               R{\'{e}}mi Munos and
+               Volodymyr Mnih},
+  title     = {The Uncertainty Bellman Equation and Exploration},
+  journal   = {CoRR},
+  volume    = {abs/1709.05380},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1709.05380},
+  eprinttype = {arXiv},
+  eprint    = {1709.05380},
+  timestamp = {Mon, 13 Aug 2018 16:49:09 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1709-05380.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-1810-12162,
+  author    = {Pranav Shyam and
+               Wojciech Jaskowski and
+               Faustino Gomez},
+  title     = {Model-Based Active Exploration},
+  journal   = {CoRR},
+  volume    = {abs/1810.12162},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1810.12162},
+  eprinttype = {arXiv},
+  eprint    = {1810.12162},
+  timestamp = {Thu, 01 Nov 2018 18:03:07 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1810-12162.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Book{Bellman:1957,
+  author =       "Bellman, Richard",
+  title =        "Dynamic Programming",
+  publisher =    "Princeton University Press",
+  year =         "1957",
+  address =   "Princeton, NJ, USA",
+  edition =   "1",
+  url = "http://books.google.com/books?id=fyVtp3EMxasC&pg=PR5&dq=dynamic+programming+richard+e+bellman&client=firefox-a#v=onepage&q=dynamic%20programming%20richard%20e%20bellman&f=false",
+  bib2html_rescat = "General RL",
+}
+
+@book{howard:dp,
+  added-at = {2008-03-11T14:52:34.000+0100},
+  address = {Cambridge, MA},
+  author = {Howard, R. A.},
+  biburl = {https://www.bibsonomy.org/bibtex/28b55f737ee6dd7800ffc7952a33bb6bd/idsia},
+  citeulike-article-id = {2380352},
+  interhash = {7eed9f4f6bd1f9ee063d80d0f732e48f},
+  intrahash = {8b55f737ee6dd7800ffc7952a33bb6bd},
+  keywords = {inaki},
+  priority = {2},
+  publisher = {MIT Press},
+  timestamp = {2008-03-11T14:56:12.000+0100},
+  title = {Dynamic Programming and Markov Processes},
+  year = 1960
+}
+@book{DBLP:books/lib/Bertsekas05,
+  author    = {Dimitri P. Bertsekas},
+  title     = {Dynamic programming and optimal control, 3rd Edition},
+  publisher = {Athena Scientific},
+  year      = {2005}
+}
