--- a/report/acknowledge.tex
+++ b/report/acknowledge.tex
@@ -1,9 +1,3 @@
-<The page should contain any acknowledgements to those who have assisted with your work.
-Where you have worked as part of a team, you should, where appropriate, reference to any contribution made by other to the project.>
-
-\vspace{1cm}
-
-Note that it is not acceptable to solicit assistance on `proof reading' which is defined as the
-``the systematic checking and identification of errors in spelling, punctuation, grammar and sentence construction, formatting and layout in the test'';
-see \texttt{https://www.leeds.ac.uk/secretariat/documents/proof\_reading\_policy.pdf}
-
+I'd like to thank my supervisors, Dr. Mehmet Dogar and Dr. Matteo Leonetti, for their constant support and thoughts throughout this project. I'd like to thank Dr. Matteo Leonetti again, for supporting me throughout the entirity of my undergraduate degree, and for providing me with many opportunities to develop autonomous service robotics applications and take part in robotics competitions.
+\\I'm grateful for the feedback from my assessor, Dr. Sebastian Ordyniak.
+\\I'd like to thank my parents, for everything.
