--- a/report/finalReport.tex
+++ b/report/finalReport.tex
@@ -21,6 +21,8 @@
 \include{./chapters/chapter2}
 \include{./chapters/chapter3}
 \include{./chapters/chapter4}
+\include{./chapters/chapter5}
+\include{./chapters/chapter6}
 
 % Adds references to the table of contents.
 \addcontentsline{toc}{chapter}{References}
