--- a/report/config.tex
+++ b/report/config.tex
@@ -7,13 +7,18 @@
 \usepackage{textcomp}
 \usepackage{epsfig,graphics}
 \usepackage{graphicx}
+\graphicspath{ {./report/assets/} }
 \usepackage{titlesec}
 \usepackage{amsmath,amsfonts,amssymb,amsthm}
 \usepackage{hyperref}
 % \usepackage{natlib}
 \usepackage[printonlyused,withpage]{acronym}
 \usepackage{xcolor}
-
+\usepackage{geometry}
+\usepackage{graphicx}
+\usepackage{wrapfig}
+\usepackage[export]{adjustbox}
+\usepackage[section]{placeins}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Details of your dissertation
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
