--- a/report/refs.bib
+++ b/report/refs.bib
@@ -971,3 +971,55 @@ improved sample and computational complexity.",
   biburl    = {https://dblp.org/rec/journals/corr/abs-1911-08265.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{krause1973taxicab,
+  title={Taxicab geometry},
+  author={Krause, Eugene F},
+  journal={The Mathematics Teacher},
+  volume={66},
+  number={8},
+  pages={695--706},
+  year={1973},
+  publisher={JSTOR}
+} 
+
+@ARTICLE{6313077,
+
+  author={Barto, Andrew G. and Sutton, Richard S. and Anderson, Charles W.},
+
+  journal={IEEE Transactions on Systems, Man, and Cybernetics}, 
+
+  title={Neuronlike adaptive elements that can solve difficult learning control problems}, 
+
+  year={1983},
+
+  volume={SMC-13},
+
+  number={5},
+
+  pages={834-846},
+
+  doi={10.1109/TSMC.1983.6313077}}
+
+
+@TECHREPORT{Moore90efficientmemory-based,
+    author = {Andrew William Moore},
+    title = {Efficient Memory-based Learning for Robot Control},
+    institution = {University of Cambridge},
+    year = {1990}
+}
+
+@inproceedings{Hayamizu2021GuidingRE,
+  title={Guiding Robot Exploration in Reinforcement Learning via Automated Planning},
+  author={Yohei Hayamizu and S. Amiri and Kishan Chandan and Keiki Takadama and Shiqi Zhang},
+  booktitle={International Conference on Automated Planning and Scheduling},
+  year={2021}
+}
+
+@article{Jiang2019TaskMotionPW,
+  title={Task-Motion Planning with Reinforcement Learning for Adaptable Mobile Service Robots},
+  author={Yuqian Jiang and Fangkai Yang and Shiqi Zhang and Peter Stone},
+  journal={2019 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  year={2019},
+  pages={7529-7534}
+}
