report: updates to background, methods

--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1118,3 +1118,17 @@ keywords = {Markov decision processes, stochastic games, provably efficient lear
   booktitle={International Conference on Machine Learning},
   year={2008}
 }
+
+@article{JORDAN1992307,
+title = {Forward models: Supervised learning with a distal teacher},
+journal = {Cognitive Science},
+volume = {16},
+number = {3},
+pages = {307-354},
+year = {1992},
+issn = {0364-0213},
+doi = {https://doi.org/10.1016/0364-0213(92)90036-T},
+url = {https://www.sciencedirect.com/science/article/pii/036402139290036T},
+author = {Michael I. Jordan and David E. Rumelhart},
+abstract = {Internal models of the environment have an important role to play in adaptive systems, in general, and are of particular importance for the supervised learning paradigm. In this article we demonstrate that certain classical problems associated with the notion of the “teacher” in supervised learning can be solved by judicious use of learned internal models as components of the adaptive system. In particular, we show how supervised learning algorithms can be utilized in cases in which an unknown dynamical system intervenes between actions and desired outcomes. Our approach applies to any supervised learning algorithm that is capable of learning in multilayer networks.}
+}
