report: continuing with methods

--- a/report/finalReport.tex
+++ b/report/finalReport.tex
@@ -19,7 +19,7 @@
 
 \include{./report/chapters/chapter1}
 \include{./report/chapters/chapter2}
-\include{./report/chapters/chapter3}
+% \include{./report/chapters/chapter3}
 \include{./report/chapters/chapter4}
 \include{./report/chapters/chapter5}
 \include{./report/chapters/chapter6}
