report: updating methods, labelling equations

--- a/report/summary.tex
+++ b/report/summary.tex
@@ -2,6 +2,7 @@ TODO:
 \begin{itemize}
     \item Finalise introduction. It needs shortening.
     \item Finish up Policy Improvement, Policy Iteration and Value iteration sections.
+    \item Function approximation; model-learning.
     \item Add the simple "PRL" agent to background research;.
     \item Exploration survey
     \item Psuedocodes for frameworks.
