report: A* and some other stuff.

--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1132,3 +1132,41 @@ url = {https://www.sciencedirect.com/science/article/pii/036402139290036T},
 author = {Michael I. Jordan and David E. Rumelhart},
 abstract = {Internal models of the environment have an important role to play in adaptive systems, in general, and are of particular importance for the supervised learning paradigm. In this article we demonstrate that certain classical problems associated with the notion of the “teacher” in supervised learning can be solved by judicious use of learned internal models as components of the adaptive system. In particular, we show how supervised learning algorithms can be utilized in cases in which an unknown dynamical system intervenes between actions and desired outcomes. Our approach applies to any supervised learning algorithm that is capable of learning in multilayer networks.}
 }
+
+@ARTICLE{4082128,
+
+  author={Hart, Peter E. and Nilsson, Nils J. and Raphael, Bertram},
+
+  journal={IEEE Transactions on Systems Science and Cybernetics}, 
+
+  title={A Formal Basis for the Heuristic Determination of Minimum Cost Paths}, 
+
+  year={1968},
+
+  volume={4},
+
+  number={2},
+
+  pages={100-107},
+
+  doi={10.1109/TSSC.1968.300136}}
+
+
+@article{fikes1972strips,
+  title={{STRIPS}: a new approach to the application of theorem proving to problem solving},
+  author={Fikes, Richard E. and Nilsson, Nils J.},
+  journal={Artificial Intelligence},
+  volume={2},
+  number={3},
+  pages={189--208},
+  year={1972},
+  publisher={Elsevier}
+}
+
+@inproceedings{kautz,
+author = {Kautz, Henry and Selman, Bart},
+year = {1992},
+month = {01},
+pages = {359-363},
+title = {Planning as Satisfiability.}
+}
