--- a/report/summary.tex
+++ b/report/summary.tex
@@ -1,11 +1,11 @@
 TODO:
 \begin{itemize}
     \item Finalise introduction. It needs shortening.
-    \item Finish up Policy Improvement, Policy Iteration and Value iteration sections.
     \item Function approximation; model-learning.
     \item Add the simple "PRL" agent to background research;.
     \item Exploration survey
     \item Psuedocodes for frameworks.
     \item Benchmarking!!!
     \item Sample efficiency analysis, complexity analysis
+    \item ENSURE BACKGROUND EQUATIONS ARE CORRECT!!!!! Add general Bellman equation
 \end{itemize}
