--- a/report/summary.tex
+++ b/report/summary.tex
@@ -9,3 +9,12 @@ TODO:
     \item Sample efficiency analysis, complexity analysis
     \item ENSURE BACKGROUND EQUATIONS ARE CORRECT!!!!! Add general Bellman equation
 \end{itemize}
+
+
+TODO METHODS:
+\begin{itemize}
+    \item Add example to go alongside explanation.
+    \item Go more in depth about value iteration, A*, specifically on the PLANNING side of things
+    \item Pseudocodes for planning side of things
+    
+\end{itemize}
