report: add some stuff in ch 6.

--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1170,3 +1170,52 @@ month = {01},
 pages = {359-363},
 title = {Planning as Satisfiability.}
 }
+
+@article{lattimore,
+  added-at = {2020-02-13T11:18:48.000+0100},
+  author = {Lattimore, Tor and Szepesvari, Csaba},
+  biburl = {https://www.bibsonomy.org/bibtex/2085393a34f90b608a76dd1a4998a5369/kirk86},
+  description = {Bandit Algorithms},
+  interhash = {e5571f0a85ff77ab750e5eecc6c45106},
+  intrahash = {085393a34f90b608a76dd1a4998a5369},
+  keywords = {bandits book},
+  timestamp = {2020-02-13T11:20:19.000+0100},
+  title = {Bandit Algorithms},
+  url = {https://tor-lattimore.com/downloads/book/book.pdf},
+  year = 2017
+}
+
+@inproceedings{10.1007/11871842_29,
+author = {Kocsis, Levente and Szepesv\'{a}ri, Csaba},
+title = {Bandit Based Monte-Carlo Planning},
+year = {2006},
+isbn = {354045375X},
+publisher = {Springer-Verlag},
+address = {Berlin, Heidelberg},
+url = {https://doi.org/10.1007/11871842_29},
+doi = {10.1007/11871842_29},
+abstract = {For large state-space Markovian Decision Problems Monte-Carlo planning is one of the few viable approaches to find near-optimal solutions. In this paper we introduce a new algorithm, UCT, that applies bandit ideas to guide Monte-Carlo planning. In finite-horizon or discounted MDPs the algorithm is shown to be consistent and finite sample bounds are derived on the estimation error due to sampling. Experimental results show that in several domains, UCT is significantly more efficient than its alternatives.},
+booktitle = {Proceedings of the 17th European Conference on Machine Learning},
+pages = {282–293},
+numpages = {12},
+location = {Berlin, Germany},
+series = {ECML'06}
+}
+
+@article{auer2002finite,
+  added-at = {2012-12-29T01:24:39.000+0100},
+  author = {Auer, P. and Cesa-Bianchi, N. and Fischer, P.},
+  biburl = {https://www.bibsonomy.org/bibtex/270f73d7c42196ff8ad40101312a0564e/chsivic},
+  interhash = {d9ed352509aceb102cbb43c4127a7b30},
+  intrahash = {70f73d7c42196ff8ad40101312a0564e},
+  journal = {Machine learning},
+  keywords = {imported},
+  number = 2,
+  pages = {235--256},
+  publisher = {Springer},
+  timestamp = {2012-12-29T01:24:40.000+0100},
+  title = {Finite-time analysis of the multiarmed bandit problem},
+  volume = 47,
+  year = 2002
+}
+
